--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -90,7 +90,7 @@ USER django
 
 RUN DATABASE_URL="" \
   CELERY_BROKER_URL="" \
-  DJANGO_SETTINGS_MODULE="config.settings.test" \
+  DJANGO_SETTINGS_MODULE="config.settings" \
   python manage.py compilemessages
 
 ENTRYPOINT ["/entrypoint"]
