--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # ==== pytest ====
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--ds=config.settings.test --reuse-db"
+addopts = "--ds=config.settings --reuse-db"
 python_files = [
     "tests.py",
     "test_*.py",
@@ -50,7 +50,7 @@ module = "*.migrations.*"
 ignore_errors = true
 
 [tool.django-stubs]
-django_settings_module = "config.settings.test"
+django_settings_module = "config.settings"
 
 
 # ==== PyLint ====
@@ -59,7 +59,7 @@ load-plugins = [
     "pylint_django",
     "pylint_celery",
 ]
-django-settings-module = "config.settings.local"
+django-settings-module = "config.settings"
 
 [tool.pylint.FORMAT]
 max-line-length = 119
