--- a/production.yml
+++ b/production.yml
@@ -19,8 +19,8 @@ services:
       - postgres
       - redis
     env_file:
-      - ./.envs/.production/.django
-      - ./.envs/.production/.postgres
+      - ./.envs/.django
+      - ./.envs/.postgres
     command: /start
 
   postgres:
@@ -32,7 +32,7 @@ services:
       - production_postgres_data:/var/lib/postgresql/data
       - production_postgres_data_backups:/backups
     env_file:
-      - ./.envs/.production/.postgres
+      - ./.envs/.postgres
 
   traefik:
     build:
