--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Run DB Migrations
         run: docker-compose -f local.yml run --rm django python manage.py migrate
 
+      - name: Collect Static
+        run: docker-compose -f local.yml run --rm django python manage.py collectstatic --noinput
+
       - name: Run Django Tests
         run: docker-compose -f local.yml run django pytest
 
