fix some env vars
-CELERY_BROKER_URL consider required

--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -90,6 +90,9 @@ USER django
 
 RUN DATABASE_URL="" \
   CELERY_BROKER_URL="" \
+  PLUGGABLES="" \
+  USE_DOCKER="" \
+  REDIS_URL="" \
   DJANGO_SETTINGS_MODULE="config.settings" \
   python manage.py compilemessages
 
