--- a/.envs/.django.dist
+++ b/.envs/.django.dist
@@ -37,7 +37,7 @@ REDIS_URL=redis://redis:6379/0
 
 # Celery
 # ------------------------------------------------------------------------------
-#CELERY_BROKER_URL=$REDIS_URL
+CELERY_BROKER_URL=$REDIS_URL
 
 # Flower
 CELERY_FLOWER_USER=debug
