isort to my preference

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,14 @@ target-version = ['py311']
 profile = "black"
 line_length = 119
 known_first_party = [
-    "name_goes_here",
     "config",
+    "django",
+    "rest_framework",
+    "graphene",
+    "graphene_django"
 ]
+known_apps=["name_goes_here"]
+sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "APPS", "LOCALFOLDER"]
 skip = ["venv/"]
 skip_glob = ["**/migrations/*.py"]
 
