--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,9 @@ Pillow = ">=10.1.0,<10.2"
 whitenoise = ">=6.6.0,<6.7"
 
 [dev-packages]
+django-coverage-plugin = ">=3.1.0,<3.2"
 django-debug-toolbar = ">=4.2.0,<4.3"
+coverage = ">=7.4.0,<7.5"
 factory-boy = ">=3.3.0,<3.4"
 pre-commit = ">=3.6.0,<3.7"
 psycopg = ">=3.1.16,<3.2"
