rm traefik and use nginx instead

--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -1,7 +1,30 @@
+upstream django_upstream {
+	server django:5000;
+	keepalive 4;
+}
+upstream flower_upstream {
+	server flower:5555;
+	keepalive 2;
+}
+
 server {
   listen       80;
-  server_name  localhost;
+  server_name  domain_name_goes_here;
   location /media/ {
     alias /usr/share/nginx/media/;
+  }
+  location /flower/ {
+	proxy_redirect      off;
+	proxy_set_header    X-Real-IP $remote_addr;
+	proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+	proxy_set_header    Host $http_host;
+	proxy_pass http://flower_upstream;
+  }
+  location / {
+	proxy_redirect      off;
+	proxy_set_header    X-Real-IP $remote_addr;
+	proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+	proxy_set_header    Host $http_host;
+	proxy_pass http://django_upstream;
   }
 }
