added ssl support with nginx njs-acme

--- a/compose/production/nginx/Dockerfile
+++ b/compose/production/nginx/Dockerfile
@@ -1,2 +1,4 @@
-FROM nginx:1.24-alpine
-COPY ./compose/production/nginx/default.conf /etc/nginx/conf.d/default.conf
+FROM nginx:1.25
+
+COPY ./compose/production/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ./compose/production/nginx/njs-acme-ac656e1.js /etc/nginx/njs_modules/acme.js
