exclude njs-acme.js from pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: '^docs/|/migrations/'
+exclude: '^compose/production/nginx/njs-acme.*.js|^docs/|/migrations/'
 default_stages: [commit]
 
 repos:
