--- a/compose/production/nginx/nginx.conf
+++ b/compose/production/nginx/nginx.conf
@@ -57,6 +57,12 @@ http {
 		ssl_certificate data:$dynamic_ssl_cert;
 		ssl_certificate_key data:$dynamic_ssl_key;
 
+		ssl_protocols TLSv1.2 TLSv1.3;
+
+		# Enable forward secrecy
+		ssl_prefer_server_ciphers off;
+		ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+
 		location ~ "^/\.well-known/acme-challenge/[-_A-Za-z0-9]{22,128}$" {
 			js_content acme.challengeResponse;
 		}
