--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,7 @@ django-debug-toolbar = ">=4.2.0,<4.3"
 coverage = ">=7.4.0,<7.5"
 factory-boy = ">=3.3.0,<3.4"
 pre-commit = ">=3.6.0,<3.7"
-psycopg = ">=3.1.16,<3.2"
+psycopg_binary = ">=3.1.16,<3.2"
 pytest = ">=7.4.3,<7.5"
 pytest-django = ">=4.7.0,<4.8"
 pytest-sugar = ">=0.9.7,<1"
