--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,6 @@ argon2-cffi = ">=23.1.0,<23.2"  # for django.contrib.auth.hashers.Argon2Password
 drf-spectacular = ">=0.27,<0.28"
 celery = ">=5.3.6,<5.4"
 flower = ">=2.0.1,<2.1"
-gevent = ">=23.9.1,<23.10"
 Pillow = ">=10.1.0,<10.2"
 whitenoise = ">=6.6.0,<6.7"
 
@@ -37,7 +36,7 @@ watchfiles = ">=0.21.0,<0.22"
 
 [prod-packages]
 "psycopg[c]" = ">=3.1.16,<3.2"
-"gunicorn[gevent]" = ">=21.2.0,<21.3"
+"gunicorn" = ">=21.2.0,<21.3"
 
 [requires]
 python_version = ">=3.9,<3.13"
