--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-filter = ">=23.5,<23.6"
 django-graphql-jwt = ">=0.4.0,<0.5"
 django-redis = ">=5.4.0,<5.5"
 djangorestframework-simplejwt = ">=5.3.1,<5.4"
+channels = ">=4.0.0,<4.1"
 graphene-django = ">=3.2,<3.3"
 argon2-cffi = ">=23.1.0,<23.2"  # for django.contrib.auth.hashers.Argon2PasswordHasher
 drf-spectacular = ">=0.27,<0.28"
@@ -24,6 +25,7 @@ whitenoise = ">=6.6.0,<6.7"
 django-coverage-plugin = ">=3.1.0,<3.2"
 django-debug-toolbar = ">=4.2.0,<4.3"
 coverage = ">=7.4.0,<7.5"
+daphne = ">=4.0.0,<4.1"
 factory-boy = ">=3.3.0,<3.4"
 pre-commit = ">=3.6.0,<3.7"
 psycopg = ">=3.1.16,<3.2"
