--- a/production.yml
+++ b/production.yml
@@ -4,6 +4,7 @@ volumes:
   production_postgres_data: {}
   production_postgres_data_backups: {}
   production_django_media: {}
+  production_django_logs: {}
   production_ssl_certs: {}
 
 services:
@@ -15,6 +16,7 @@ services:
     image: name_goes_here_production_django
     volumes:
       - production_django_media:/app/name_goes_here/media
+      - production_django_logs:/app/name_goes_here/logs
     depends_on:
       - postgres
       - redis
