--- a/.envs/.django.dist
+++ b/.envs/.django.dist
@@ -3,11 +3,11 @@
 USE_DOCKER=no
 #IPYTHONDIR=
 {str, default to config.settings}
-DJANGO_SETTINGS_MODULE=
+#DJANGO_SETTINGS_MODULE=
 # DJANGO_READ_DOT_ENV_FILE=True
 PLUGGABLES=DEBUG_TOOLBAR,NO_PASS_VALIDATION,SERVE_STATICFILES
 {str, default to admin/}
-DJANGO_ADMIN_URL=
+#DJANGO_ADMIN_URL=
 # {list, default to localhost,0.0.0.0,127.0.0.1}
 #DJANGO_ALLOWED_HOSTS=
 # {default is figured out of .envs/.postgres, postgres://user:password@hostname:port/db_name}
